force-app/main/default/objects/Leave_Request__c/fields/Approval_Target_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Approval_Target_Snapshot__c</fullName>
    <label>Approval Target Snapshot</label>
    <length>80</length>
    <type>Text</type>
</CustomField>