force-app/main/default/objects/Leave_Request__c/fields/Balance_Deducted__c.field-meta.xml
<CustomField>
    <fullName>Balance_Deducted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Balance Deducted</label>
    <type>Checkbox</type>
</CustomField>