force-app/main/default/objects/Leave_Request__c/fields/Days__c.field-meta.xml
<CustomField>
    <fullName>Days__c</fullName>
    <label>Days</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>