force-app/main/default/objects/Leave_Request__c/fields/End_Time_Slot__c.field-meta.xml
<CustomField>
    <fullName>End_Time_Slot__c</fullName>
    <label>End Time Slot</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full_Day</fullName>
                <default>true</default>
                <label>Full Day</label>
            </value>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Afternoon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>