force-app/main/default/objects/Leave_Request__c/fields/Leave_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Leave_Type_Code__c</fullName>
    <label>Leave Type Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>