force-app/main/default/objects/Leave_Request__c/fields/Leave_Type_Definition__c.field-meta.xml
<CustomField>
    <fullName>Leave_Type_Definition__c</fullName>
    <label>Leave Type Definition</label>
    <referenceTo>Leave_Type_Definition__c</referenceTo>
    <relationshipLabel>Leave Requests</relationshipLabel>
    <relationshipName>Leave_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>