force-app/main/default/objects/Leave_Request__c/fields/Leave_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Leave_Type_Name__c</fullName>
    <label>Leave Type Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>