force-app/main/default/objects/Leave_Request__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <label>Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Manager Leave Requests</relationshipLabel>
    <relationshipName>Manager_Leave_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>