force-app/main/default/objects/Leave_Request__c/fields/Submitted_Time__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Time__c</fullName>
    <label>Submitted Time</label>
    <type>DateTime</type>
</CustomField>