force-app/main/default/objects/Leave_Request__c/validationRules/Days_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Days_Must_Be_Positive</fullName>
    <active>false</active>
    <errorConditionFormula><![CDATA[Days__c <= 0]]></errorConditionFormula>
    <errorDisplayField>Days__c</errorDisplayField>
    <errorMessage>Leave days must be greater than zero.</errorMessage>
</ValidationRule>