force-app/main/default/objects/Leave_Request__c/validationRules/End_Date_Not_Before_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Not_Before_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula><![CDATA[End_Date__c < Start_Date__c]]></errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date must be greater than or equal to Start Date.</errorMessage>
</ValidationRule>